--- a/RealtimeSpreadMonitor/CodeGenerator/CodeGenerator.csproj
+++ b/RealtimeSpreadMonitor/CodeGenerator/CodeGenerator.csproj
@@ -56,6 +56,7 @@
     <Compile Include="LayoutUtils.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TimerTickHardler.cs" />
     <Compile Include="TypeUtils.cs" />
   </ItemGroup>
   <ItemGroup>
