Fixed build failures in CodeGenerator and CQGLibrary. Fixed run time error in FillEventCheckingDictionary. Removed dead code from Internal.cs. Moved CodeGenerator, CQGLibrary and UnitTestFakeCQG projects to a separate solution. Removed CodeGenerator and UnitTestFakeCQG projects from RealtimeSpreadMonitor solution. Added reference to CQGLibrary project from DataCollectionForRealtime solution instead of a reference to CQGLibrary.dll. Removed copying of CQGLibrary.dll to DataCollectionForRealtime project directory as a post-build event of CQGLibrary project. Added .gitignore and .gitattributes. Committed Interop.CQG.dll to the root of repository and provided copying it to "bin" directories instead of searching for it in "obj" directory at run time.

--- a/DataCollectionForRealtime/DataCollectionForRealtime/DataCollectionForRealtime.csproj
+++ b/DataCollectionForRealtime/DataCollectionForRealtime/DataCollectionForRealtime.csproj
@@ -112,6 +112,15 @@
     </Compile>
   </ItemGroup>
   <ItemGroup>
+    <Service Include="{3259AA49-8AA1-44D3-9025-A0B520596A8C}" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="..\..\Interop.CQG.dll">
+      <Link>Interop.CQG.dll</Link>
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
+  <ItemGroup>
     <COMReference Include="CQG">
       <Guid>{51F35562-AEB4-4AB3-99E8-AC9666344B64}</Guid>
       <VersionMajor>4</VersionMajor>
@@ -121,14 +130,6 @@
       <Isolated>False</Isolated>
       <EmbedInteropTypes>True</EmbedInteropTypes>
     </COMReference>
-  </ItemGroup>
-  <ItemGroup>
-    <Service Include="{3259AA49-8AA1-44D3-9025-A0B520596A8C}" />
-  </ItemGroup>
-  <ItemGroup>
-    <Content Include="CQGLibrary.dll">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Content>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
