Provided creation of a default internal constructor for CQG types that do not have public constructors. The constructor initializes thisObjUnqKey. Provided short unique deterministic names for unnamed arguments of CQG methods. Moved some code from CreateClassInterfaceStruct.cs to CreateMethods.cs. Increased query timeout to facilitate debugging. Refactored some code. Corrected couple of typos.

--- a/FakeCQG/CodeGenerator/CodeGenerator.csproj
+++ b/FakeCQG/CodeGenerator/CodeGenerator.csproj
@@ -42,13 +42,13 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="CreateCtor.cs" />
+    <Compile Include="CreateCtors.cs" />
     <Compile Include="CreateDelegate.cs" />
     <Compile Include="CreateDtor.cs" />
     <Compile Include="CreateEnum.cs" />
     <Compile Include="CreateEvent.cs" />
     <Compile Include="CreateEventHandler.cs" />
-    <Compile Include="CreateMethod.cs" />
+    <Compile Include="CreateMethods.cs" />
     <Compile Include="CreateMethodSignature.cs" />
     <Compile Include="CreateProperties.cs" />
     <Compile Include="CreateClassInterfaceStruct.cs" />
