--- a/FakeCQG/CQGLibrary/CQGLibrary.csproj
+++ b/FakeCQG/CQGLibrary/CQGLibrary.csproj
@@ -64,6 +64,7 @@
   <ItemGroup>
     <Compile Include="CQGLibrary.cs" />
     <Compile Include="DataDictionaries.cs" />
+    <Compile Include="HandShaking\HandShakingEventArgs.cs" />
     <Compile Include="HandShaking\Listener.cs" />
     <Compile Include="HandShaking\Subscriber.cs" />
     <Compile Include="Helpers\AnswerHelper.cs" />
