Fixed logic of creation of CQG objects. For now, the object key is not generated in client, but returned from data collector. Fixed logic in ExecuteTheQuery in the case of more than one argument in a call. Fixed logic of query pushing and waiting (sometimes we checked DataDictionaries.IsAnswer[id] before this key is added to the dictionary). Updated code generator to create fields. Made structs to be passed through MongoDB as values. Optimized inheritance in classes and interfaces of fake CQG client API to avoid multiple inheritances from the same interfaces (i.e. both direct and indirect inheritance from the same interface). Corrected problems with autogenerated API for indexed properties. Simplified autogenerted code by introduction of new generic methods "CallMethod", "GetProperty" and so on. Made data collector clear the answers list in DB at start. Corrected logic of working with properties in data collector. Fixed problem with serialization of C# Dictionaries to MongoDB (integer keys are not allowed so I replaced them with string keys). Implemented fake CQG objects destructors logic. Implemented "Automatic work" checkbox logic in data collector. Removed silent suppression of some exceptions to facilitate debugging. Refactored and optimized code in many places. Removed code duplication. Removed some unused code. Removed GetPropertiesFromMatryoshka, nameSubstitutes and answerDictionary as not needed. Made some code style changes. Corrected typos.
Disabled logic of events handling since it does not work properly yet.

The code was tested with TimedBars project.

--- a/DataCollectionForRealtime/DataCollectionForRealtime/DataCollectionForRealtime.csproj
+++ b/DataCollectionForRealtime/DataCollectionForRealtime/DataCollectionForRealtime.csproj
@@ -71,8 +71,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AsyncTaskListener.cs" />
+    <Compile Include="AutoGenEventHandlers.cs" />
     <Compile Include="CQGDataManagement.cs" />
-    <Compile Include="CQGEventHandlers.cs" />
     <Compile Include="QueryHandler.cs" />
     <Compile Include="PropertyModel.cs" />
     <Compile Include="RealtimeDataManagement.cs">
