Split DataDictionaries into ClientDictionaries and ServerDictionaries to avoid any confusions and to prepare code for applying data collector garbage collection policy to ServerDictionaries in the case of multiple realtimes. Renamed method CreateEventHandler to CreateServerEventHandler and reworked it considerably. Simplified method CreateArgsObjectArray and moved server-specific logic from it to other methods. Moved code from AutoGenEventHandlers.cs to AnswerHelper.cs to keep autogenerated code logic as simple as possible. Corrected CommonEventHandler method to save all the arguments to the answer object correctly. Switched namespace for enums in AutoGenEventHandlers.cs file to use real CQG enums. Replaced string keys with int keys in QueryInfo and AnswerInfo dictionaries to avoid extra casts. Added corresponding attributes to the properties in the classes (int keys are not allowed by default). Updated ExecuteTheQuery method code to start listening for handshaking not before, but after execution of the first query. Moved QueryType enum out of QueryInfo class for simplicity. Renamed some files, classes, properties, variables, methods, enum values etc. to be more clear. Corrected some typos. Refactored and formatted code for better readability and maintainability. Switched all the solutions to Visual Studio 2015 version.

--- a/FakeCQG/CodeGenerator/CodeGenerator.csproj
+++ b/FakeCQG/CodeGenerator/CodeGenerator.csproj
@@ -42,23 +42,23 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CreateClientTimerHandler.cs" />
     <Compile Include="CreateCtors.cs" />
     <Compile Include="CreateDelegate.cs" />
     <Compile Include="CreateDtor.cs" />
     <Compile Include="CreateEnum.cs" />
-    <Compile Include="CreateEventHandler.cs" />
     <Compile Include="CreateEvents.cs" />
     <Compile Include="CreateFields.cs" />
     <Compile Include="CreateMethods.cs" />
     <Compile Include="CreateMethodSignature.cs" />
     <Compile Include="CreateProperties.cs" />
     <Compile Include="CreateClassInterfaceStruct.cs" />
+    <Compile Include="CreateServerEventHandler.cs" />
     <Compile Include="CreateTypes.cs" />
     <Compile Include="LayoutUtils.cs" />
     <Compile Include="OtherUtils.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="TimerTickHandler.cs" />
     <Compile Include="TypeUtils.cs" />
   </ItemGroup>
   <ItemGroup>
