--- a/FakeCQG/CQGLibrary/CQGLibrary.csproj
+++ b/FakeCQG/CQGLibrary/CQGLibrary.csproj
@@ -70,10 +70,12 @@
     <Compile Include="Handshaking\Subscriber.cs" />
     <Compile Include="Helpers\AnswerHelper.cs" />
     <Compile Include="Helpers\ConnectionSettings.cs" />
+    <Compile Include="Helpers\EventHelper.cs" />
     <Compile Include="Helpers\HandshakingHelper.cs" />
     <Compile Include="Helpers\QueryHelper.cs" />
     <Compile Include="Internal.cs" />
     <Compile Include="Models\AnswerInfo.cs" />
+    <Compile Include="Models\EventInfo.cs" />
     <Compile Include="Models\HandshakingModel.cs" />
     <Compile Include="Models\QueryInfo.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
