--- a/DataCollectionForRealtime/DataCollectionForRealtime/DataCollectionForRealtime.csproj
+++ b/DataCollectionForRealtime/DataCollectionForRealtime/DataCollectionForRealtime.csproj
@@ -80,11 +80,11 @@
       <DependentUpon>DCMiniMonitor.cs</DependentUpon>
     </Compile>
     <Compile Include="QueryHandler.cs" />
-    <Compile Include="RealtimeDataManagement.cs">
+    <Compile Include="DCMainForm.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="RealtimeDataManagement.Designer.cs">
-      <DependentUpon>RealtimeDataManagement.cs</DependentUpon>
+    <Compile Include="DCMainForm.Designer.cs">
+      <DependentUpon>DCMainForm.cs</DependentUpon>
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -92,8 +92,8 @@
     <EmbeddedResource Include="DCMiniMonitor.resx">
       <DependentUpon>DCMiniMonitor.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="RealtimeDataManagement.resx">
-      <DependentUpon>RealtimeDataManagement.cs</DependentUpon>
+    <EmbeddedResource Include="DCMainForm.resx">
+      <DependentUpon>DCMainForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
