Separated all fake CQG staff from real CQG API mirror staff and encapsulate it the name space "Internal". Moved all code used only by data collector from "FakeCQG" project. Corrected tests.

--- a/DataCollectionForRealtime/DataCollectionForRealtime/DataCollectionForRealtime.csproj
+++ b/DataCollectionForRealtime/DataCollectionForRealtime/DataCollectionForRealtime.csproj
@@ -71,6 +71,7 @@
     <Compile Include="DCMiniMonitor.Designer.cs">
       <DependentUpon>DCMiniMonitor.cs</DependentUpon>
     </Compile>
+    <Compile Include="Listener.cs" />
     <Compile Include="QueryHandler.cs" />
     <Compile Include="DCMainForm.cs">
       <SubType>Form</SubType>
