Fixed bug: CQGLibrary project had a reference to "Interop.CQG.dll". (It was loaded at run time in method ClientDictionaries.FillEventCheckingDictionary.) Fixed similar bug for TimedBars project. Added a batch file that rebuilds all the solutions and runs all the tests. The script uses nuget.exe, msbuild.exe and mstest.exe. Fixed problems in two tests: MethodAsync_RemoveOneAnswerItem and Method_DCEventHandler. The tests failed if they were launched individually. Specified "Interop.CQG.dll" as a deployment item for data collector tests so that we can run them with mstest. Renamed "CQGLibrary" to "FakeCQG". Made other minor changes.

--- a/DataCollectionForRealtime/DataCollectionForRealtime/DataCollectionForRealtime.csproj
+++ b/DataCollectionForRealtime/DataCollectionForRealtime/DataCollectionForRealtime.csproj
@@ -114,7 +114,7 @@
     <Service Include="{3259AA49-8AA1-44D3-9025-A0B520596A8C}" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="..\..\Interop.CQG.dll">
+    <Content Include="..\..\ThirdParty\Interop.CQG.dll">
       <Link>Interop.CQG.dll</Link>
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
@@ -131,9 +131,9 @@
     </COMReference>
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\..\FakeCQG\CQGLibrary\CQGLibrary.csproj">
+    <ProjectReference Include="..\..\FakeCQG\FakeCQG\FakeCQG.csproj">
       <Project>{282d7bb6-5cc3-44ef-9c47-8edd337462ea}</Project>
-      <Name>CQGLibrary</Name>
+      <Name>FakeCQG</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
