--- a/DataCollectionForRealtime/UnitTestRealCQG/UnitTestRealCQG.csproj
+++ b/DataCollectionForRealtime/UnitTestRealCQG/UnitTestRealCQG.csproj
@@ -50,8 +50,10 @@
     </Otherwise>
   </Choose>
   <ItemGroup>
+    <Compile Include="UnitTestHelper.cs" />
     <Compile Include="UnitTestQueryHandler.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="UnitTestWIthRealCQG.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\FakeCQG\FakeCQG\FakeCQG.csproj">
